--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -19,7 +19,7 @@
     <div class="wrapper-masthead">
       <div class="container">
         <header class="masthead clearfix">
-          <a href="{{ site.baseurl }}/" class="site.baseurl"><img src="{{ site.baserul }}" /></a>
+          <a href="{{ site.baseurl }}/" class="site.avatar"><img src="{{ site.baserul }}/images/profile2n.png" /></a>
 
           <div class="site-info">
             <h1 class="site-name"><a href="{{ site.baseurl }}/">{{ site.name }}</a></h1>
